Replace Collections.unmodifiableList(Arrays.asList()) by List.of()
List.of() is a new method available in Java 9. It creates immutable
lists.